--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,30 @@
 [submodule "NFTMarket-permit2/lib/permit2"]
 	path = NFTMarket-permit2/lib/permit2
 	url = https://github.com/uniswap-contracts/permit2
+[submodule "TokenBank-permit2/lib/forge-std"]
+	path = TokenBank-permit2/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "TokenBank-permit2/lib/permit2"]
+	path = TokenBank-permit2/lib/permit2
+	url = https://github.com/Uniswap/permit2
+[submodule "TokenBank-permit2/lib/openzeppelin-contracts"]
+	path = TokenBank-permit2/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "TokenBank-permit2-1/lib/forge-std"]
+	path = TokenBank-permit2-1/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "TokenBank-permit2-1/lib/permit2"]
+	path = TokenBank-permit2-1/lib/permit2
+	url = https://github.com/Uniswap/permit2
+[submodule "TokenBank-permit2-1/lib/openzeppelin-contracts"]
+	path = TokenBank-permit2-1/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "MemeLauncher/lib/forge-std"]
+	path = MemeLauncher/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "MemeLauncher/lib/openzeppelin-contracts"]
+	path = MemeLauncher/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "MemeLauncher/lib/openzeppelin-contracts-upgradeable"]
+	path = MemeLauncher/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
