--- a/NFTMarket-permit2/foundry.toml
+++ b/NFTMarket-permit2/foundry.toml
@@ -4,7 +4,8 @@ out = "out"
 libs = ["lib"]
 
 remappings = [
-  "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"
+  "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+  "permit2/=lib/permit2/src/"
 ]
 
 # 添加RPC端点和Etherscan配置
