--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,30 @@
 [submodule "AirdopMerkleNFTMarket/lib/openzeppelin-contracts"]
 	path = AirdopMerkleNFTMarket/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "eip7702-delegate-project/lib/forge-std"]
+	path = eip7702-delegate-project/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "eip7702-delegate-project/lib/openzeppelin-contracts"]
+	path = eip7702-delegate-project/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "NFTMarket-Upgradeable/lib/forge-std"]
+	path = NFTMarket-Upgradeable/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "NFTMarket-Upgradeable/lib/openzeppelin-contracts-upgradeable"]
+	path = NFTMarket-Upgradeable/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "NFTMarket-Upgradeable/lib/openzeppelin-contracts"]
+	path = NFTMarket-Upgradeable/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "NFTMarket-Upgradeable-Transparent/lib/forge-std"]
+	path = NFTMarket-Upgradeable-Transparent/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "NFTMarket-Upgradeable-Transparent/lib/openzeppelin-contracts"]
+	path = NFTMarket-Upgradeable-Transparent/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "NFTMarket-Upgradeable-Transparent/lib/openzeppelin-contracts-upgradeable"]
+	path = NFTMarket-Upgradeable-Transparent/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
+[submodule "openspace_ctf/lib/forge-std"]
+	path = openspace_ctf/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
